Fix layer opacity slider z-index

--- a/src/sass/main/components/_map-controls.sass
+++ b/src/sass/main/components/_map-controls.sass
@@ -187,6 +187,7 @@
   top: auto
   right: 10px
   bottom: 30px
+  z-index: 1000
 
 // --------------------------------------
 // [Opacity Slider] ::end
